# genai-agentos

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRDspecs.md  README.md  docker-compose.dev.yml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: monorepo_cicd.yaml
backend/: README.md  main.py  pyproject.toml
cli/: pyproject.toml
cli/a2a/lab_location_agent/: lab_location_a2a_server.py  pyproject.toml  requirements.txt  simple_lab_agent.py  test_response.py
cli/agents/text_to_audio/: main.py  pyproject.toml
crewai-a2a-server/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
crewai-a2a-server/src/: agent.py  agent_executor.py  main_genomic.py  main_hypothesis.py  main_literature.py  main_pathway.py  tools.py
frontend/: Dockerfile.dev  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-react/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
frontend-react/public/: index.html  manifest.json
frontend-react/src/: App.jsx  index.jsx
frontend/src/: App.tsx  index.css  router.tsx
genai_agents_example/get_current_date_agent/: .env  main.py  pyproject.toml
genai_agents_example/get_current_date_agent_google_colab/: .env  main.py
genai_agents_example/get_weather_agent/: .env  main.py  pyproject.toml
genai_agents_example/read_txt_file_agent/: main.py  pyproject.toml
genai_agents_example/save_file_agents/: .env  main.py  pyproject.toml
master-agent/: main.py  pyproject.toml
master-agent/agents/: base.py  (+2 more)
tests/: conftest.py  pyproject.toml  schemas.py
(+231 files in other folders)
