[project]
name = "healthcare-location-agent"
version = "0.1.0"
description = "Healthcare location agent with Perplexity A2A communication"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.1.0",
    "asyncio>=3.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
